// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders props when passed in 1`] = `
<StyledComponent
  anchor="start"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  text-anchor: ",
          [Function],
          ";
  font-style: italic;
  font-size: 125%;
  font-weight: bold;
  stroke: #fff;
",
        ],
      },
      "defaultProps": Object {
        "anchor": "middle",
      },
      "displayName": "styled.text",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "anchor": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "text",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  axis label
</StyledComponent>
`;

exports[`renders props when passed in 2`] = `
<StyledComponent
  anchor="middle"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  text-anchor: ",
          [Function],
          ";
  font-style: italic;
  font-size: 125%;
  font-weight: bold;
  stroke: #fff;
",
        ],
      },
      "defaultProps": Object {
        "anchor": "middle",
      },
      "displayName": "styled.text",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "anchor": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "text",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  axis label
</StyledComponent>
`;

exports[`renders props when passed in 3`] = `
<StyledComponent
  anchor="end"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  text-anchor: ",
          [Function],
          ";
  font-style: italic;
  font-size: 125%;
  font-weight: bold;
  stroke: #fff;
",
        ],
      },
      "defaultProps": Object {
        "anchor": "middle",
      },
      "displayName": "styled.text",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "anchor": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "text",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  axis label
</StyledComponent>
`;

exports[`renders successfully 1`] = `
<StyledComponent
  anchor="middle"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  text-anchor: ",
          [Function],
          ";
  font-style: italic;
  font-size: 125%;
  font-weight: bold;
  stroke: #fff;
",
        ],
      },
      "defaultProps": Object {
        "anchor": "middle",
      },
      "displayName": "styled.text",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "anchor": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "text",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`renders text when passed in successfully 1`] = `
<StyledComponent
  anchor="middle"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  text-anchor: ",
          [Function],
          ";
  font-style: italic;
  font-size: 125%;
  font-weight: bold;
  stroke: #fff;
",
        ],
      },
      "defaultProps": Object {
        "anchor": "middle",
      },
      "displayName": "styled.text",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "anchor": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "text",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  x-axis
</StyledComponent>
`;
